--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-/bootstrap/compiled.php
-vendor
-composer.phar
-composer.lock
-.env.*.php
-.env.php
-.local
-.DS_Store
-Thumbs.db
+# Mrcore Exclusions
 /files/*
 !/files/mrcore
 !/workbench/theme/current-theme
@@ -21,3 +13,18 @@ Thumbs.db
 !/public/uploads/avatar_user1.png
 !/public/uploads/avatar_user2.png
 !/public/uploads/badge1.png
+
+# Common Exclusions
+/bootstrap/compiled.php
+vendor
+composer.phar
+composer.lock
+.env.*.php
+.env.php
+/.local
+.DS_Store
+Thumbs.db
+.nfs*
+.swp
+
+
