--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,13 @@
 		"laravel/framework": "4.2.*",
 		"sabre/dav": "1.8.7",
 		"camspiers/porter-stemmer": "1.0.0",
-		"easybook/geshi": "dev-master"
+		"easybook/geshi": "dev-master",
+		"mreschke/mrcore4-legacy": "dev-master",
+		"mreschke/helpers": "dev-master",
+		"mreschke/dbal": "dev-master",
+		"mreschke/render": "dev-master",
+		"react/react": "0.4.2",
+		"barryvdh/laravel-debugbar": "~1.8@dev"
 	},
 	"autoload": {
 		"classmap": [
