--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"laravel/framework": "4.2.*",
 		"sabre/dav": "1.8.7",
 		"camspiers/porter-stemmer": "1.0.0",
-		"easybook/geshi": "dev-master"
+		"easybook/geshi": "dev-master",
+		"barryvdh/laravel-debugbar": "~1.8@dev"
 	},
 	"autoload": {
 		"classmap": [
