--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-	"name": "laravel/laravel",
-	"description": "The Laravel Framework.",
-	"keywords": ["framework", "laravel"],
+	"name": "mreschke/mrcore",
+	"description": "A Wiki/CMS built with Laravel 5",
+	"keywords": ["mrcore", "wiki", "cms", "framework", "laravel"],
 	"license": "MIT",
 	"type": "project",
 	"require": {
@@ -9,14 +9,15 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
-		"phpspec/phpspec": "~2.1"
+		"phpspec/phpspec": "~2.1",
+		"barryvdh/laravel-debugbar": "~1.8@dev"
 	},
 	"autoload": {
 		"classmap": [
 			"database"
 		],
 		"psr-4": {
-			"App\\": "app/"
+			"Mrcore\\": "app/"
 		}
 	},
 	"autoload-dev": {
