--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,18 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"illuminate/html": "~5.0",
-		"graham-campbell/exceptions": "0.1.*",
 		"guzzlehttp/guzzle": "~4.0",
-		"predis/predis": "1.1.*@dev",
+		"predis/predis": "1.0.1",
+		"filp/whoops": "1.1.3",
 		"sabre/dav": "1.8.7",
 		"camspiers/porter-stemmer": "1.0.0",
-		"easybook/geshi": "dev-master",
+		"easybook/geshi": "1.0.8.12",
 		"dynatron/dealer": "master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
 		"phpspec/phpspec": "~2.1",
-		"barryvdh/laravel-debugbar": "~1.8@dev"
+		"barryvdh/laravel-debugbar": "2.0.0"
 	},
 	"autoload": {
 		"classmap": [
