--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
 		"laravel/framework": "4.2.*",
 		"sabre/dav": "1.8.7",
 		"camspiers/porter-stemmer": "1.0.0",
-		"easybook/geshi": "dev-master",
-		"barryvdh/laravel-debugbar": "~1.8@dev"
+		"easybook/geshi": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
@@ -51,6 +50,7 @@
 	"minimum-stability": "dev",
 	"require-dev": {
 		"fzaninotto/faker": "1.4.*",
-		"way/generators": "2.*"
+		"way/generators": "2.*",
+		"barryvdh/laravel-debugbar": "~1.8@dev"
 	}
 }
